# railgun

./: .gitignore  Cargo.toml  README.md  go_oc.sh
crates/vllm-cli/: Cargo.toml
crates/vllm-cli/src/: benchmark.rs  generate.rs  main.rs  serve.rs
crates/vllm-core/: Cargo.toml
crates/vllm-core/src/: device.rs  dtype.rs  error.rs  lib.rs  tensor.rs
crates/vllm-cuda/: Cargo.toml  build.rs
crates/vllm-cuda/src/: allocator.rs  context.rs  lib.rs
crates/vllm-cuda/src/kernels/: isoquant_utils.cuh  mod.rs  paged_attention.cu  paged_attention_utils.cuh  paged_attention_v1_plus.cu  paged_attention_v2_partition.cu  paged_attention_v2_reduce.cu  paged_attn_op.rs  rope.cu
crates/vllm-cuda/tests/: test_paged_attention.rs
crates/vllm-engine/: Cargo.toml
crates/vllm-engine/src/: engine.rs  lib.rs  sampling.rs
crates/vllm-models/: Cargo.toml
crates/vllm-models/src/: config.rs  lib.rs  registry.rs  tokenizer.rs  traits.rs
crates/vllm-models/src/llama/: architecture.rs  attention.rs  mod.rs  model.rs
crates/vllm-paged-attention/: Cargo.toml
crates/vllm-paged-attention/src/: allocator.rs  block.rs  kv_cache.rs  lib.rs
crates/vllm-scheduler/: Cargo.toml
crates/vllm-scheduler/src/: batch.rs  lib.rs  request.rs  scheduler.rs
docs/: cli-configuration.md
docs/superpowers/plans/: 2025-02-14-refine-task-2.md  2025-05-24-paged-attention-v2-refinement.md  2026-04-13-isoquant-rotation.md  2026-04-13-paged-attention-v2.md  2026-04-13-refine-paged-attention-v1-plus.md  2026-04-13-swapping-and-sampling.md
docs/superpowers/specs/: 2025-05-24-paged-attention-v2-refinement.md  2026-04-13-isoquant-rotation-design.md  2026-04-13-paged-attention-v2-design.md
todos/: isoquant-ready.md  paged-attention-v2-ready.md
