[package]
name        = "vllm-core"
description = "Core tensor types, device abstractions, and error handling for Railgun"
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
candle-core = { workspace = true }
half        = { workspace = true }
tracing     = { workspace = true }
